kong-ingress-controller/2-ingress-with-plugin.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kong-ingress
  namespace: <NAMESPACE>
  annotations:
    konghq.com/plugins: rate-limiting-example
    konghq.com/strip-path: "true"
spec:
  ingressClassName: kong
  rules:
    - http:
        paths:
          - path: /vts
            pathType: ImplementationSpecific
            backend:
              service:
                name: <SERVICENAME>
                port:
                  number: 8080
